remove some code smells